<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.addmeeting.AddMeetingFragment"
    android:id="@+id/add_meeting_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Object Meeting -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_object_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/edit_input_object_meeting"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_help_blue_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_object_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Location -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_room_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_input_room_meeting"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_location_on_blue_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_room_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/edit_input_date_meeting"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_location_on_blue_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Hour -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Begin -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_hour_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_columnWeight="1"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:hint="@string/edit_input_hour_start_meeting"
                    app:boxBackgroundColor="#ECECF1"
                    app:boxStrokeColor="#3D73DD"
                    app:startIconTint="#3D73DD"
                    app:startIconDrawable="@drawable/ic_access_time_blue_24dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/text_layout_hour_end">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_hour_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:focusableInTouchMode="false"
                        android:cursorVisible="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- End -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_hour_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_row="0"
                    android:layout_columnWeight="1"
                    android:hint="@string/edit_input_hour_end_meeting"
                    app:boxBackgroundColor="#ECECF1"
                    app:boxStrokeColor="#3D73DD"
                    app:startIconTint="#3D73DD"
                    app:startIconDrawable="@drawable/ic_access_time_blue_24dp"
                    app:errorEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/text_layout_hour_start">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_hour_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:focusableInTouchMode="false"
                        android:cursorVisible="false"/>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- List of participants -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_input_participants_meeting"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                app:startIconDrawable="@drawable/ic_account_circle_blue_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Information -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_input_participants_info"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:boxBackgroundColor="#ECECF1"
                app:boxStrokeColor="#3D73DD"
                app:startIconTint="#3D73DD"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_information"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Buttons -->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                android:layout_gravity="center"
                android:useDefaultMargins="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/button_cancel"
                    android:enabled="true"
                    app:cornerRadius="20dp"
                    style="@style/Widget.MaterialComponents.Button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/button_ok"
                    android:enabled="false"
                    app:cornerRadius="20dp"
                    style="@style/Widget.MaterialComponents.Button"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>