<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.listemployees.ListEmployeesFragment"
    android:id="@+id/list_employees_fragment">

    <!-- RecyclerView implementation -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_list_employees"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>