<resources>
    <string name="app_name">MaReuApplication</string>

    <!-- List of room names -->
    <string name="room_1">Bohr</string>
    <string name="room_2">Dirac</string>
    <string name="room_3">Einstein</string>
    <string name="room_4">Faraday</string>
    <string name="room_5">Feynman</string>
    <string name="room_6">Heisenberg</string>
    <string name="room_7">Maxwell</string>
...
    <string name="edit_input_date_meeting">Date</string>
    <string name="edit_input_hour_start_meeting">Start :</string>
    <string name="edit_input_hour_end_meeting">End :</string>
    <string name="edit_input_participants_meeting">Participants</string>
    <string name="edit_input_participants_info">Information</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_ok">OK</string>

    <!-- menu_list_meetings_fragment.xml -->
    <string name="title_icon_filter_by_date">Filter by date</string>
    <string name="title_icon_filter_by_room">Filter by room</string>

    <!-- menu_add_meeting_fragment.xml -->
...
