<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.listmeetings.ListMeetingsFragment"
    android:id="@+id/list_meetings_fragment">

    <!-- Background Text -->
    <TextView
        android:id="@+id/background_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_txt"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- RecyclerView implementation -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_list_meetings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

    <!-- FloatingActionButton implementation -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list_meetings_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:borderWidth="0dp"
        style="@style/FloatingActionButtonStyle"
        android:contentDescription="@string/fab_content_description" />

</androidx.constraintlayout.widget.ConstraintLayout>